corrected header z-index for modal to operate properly

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -32,7 +32,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 1050;
 }
 .header-logo img {
 	max-width: 150px;
